Performance Enhancements:
Removed unnecessary casting.

Removed unnecessary field initialization.

Removed unnecessary object creation.

User char vs. String where appropriate, as char is more efficient.


SVN-Revision: 156